quick update to 2025, cleanup. so much code for one entity's crud..